feat: integrated Swagger UI with SpringDoc OpenAPI